#pragma once

#include "Veggies.hpp"

class BlackOlives : public Veggies {
public:
    std::string toString() {
        return "Black Olives";
    }
};
