#pragma once

#include "Clams.hpp"

class FreshClams : public Clams {
public:
    std::string toString() {
        return "Fresh Clams";
    }
};
