#pragma once

#include "Clams.hpp"

class FrozenClams : public Clams {
public:
    std::string toString() {
        return "Frozen Clams from Chesapeake Bay";
    }
};
