#pragma once

#include "Sauce.hpp"

class MarinaraSauce : public Sauce {
public:
    std::string toString() {
        return "Marinara Sauce";
    }
};
