#pragma once

#include "Veggies.hpp"

class Mushrooms : public Veggies {
public:
    std::string toString() {
        return "Mushrooms";
    }
};
