#pragma once

#include "Veggies.hpp"

class Onions : public Veggies {
public:
    std::string toString() {
        return "Onions";
    }
};
