#pragma once

#include "Veggies.hpp"

class RedPeppers : public Veggies {
public:
    std::string toString() {
        return "Red Peppers";
    }
};
